<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/edit_message"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/material_dynamic_neutral90"
        android:textColorHint="@color/material_dynamic_neutral60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/edit_message"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/material_dynamic_neutral90"
        android:textColorHint="@color/material_dynamic_neutral60"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextText2"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/compare_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/material_dynamic_neutral90"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/compareButton"
        app:layout_constraintStart_toStartOf="@+id/compareButton"
        app:layout_constraintTop_toBottomOf="@+id/compareButton" />
</androidx.constraintlayout.widget.ConstraintLayout>